--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,8 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^1.6.2",
-    "bcrypt": "^5.0.1",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^8.6.0",
